--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="cn.edu.tju.cs.navidoge.MainActivity">
+    android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button_test"
+        android:id="@+id/button_net"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
-</android.support.constraint.ConstraintLayout>
+        android:text="NET" />
+    <Button
+        android:id="@+id/button_ui"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="UI" />
+    <Button
+        android:id="@+id/button_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="DATA" />
+</LinearLayout>
