--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -1,9 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.percent.PercentRelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="cn.edu.tju.cs.navidoge.DataActivity">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/button1"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="Button"
+        app:layout_widthPercent="25%"/>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button1"
+        android:layout_toEndOf="@+id/button1"
+        android:layout_toRightOf="@+id/button1"
+        android:text="Button"
+        app:layout_widthPercent="25%"/>
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/button2"
+        android:layout_toRightOf="@+id/button2"
+        android:text="Button"
+        app:layout_widthPercent="25%"/>
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/button3"
+        android:layout_toRightOf="@+id/button3"
+        android:text="Button"
+        app:layout_widthPercent="25%"/>
+
+    <Button
+        android:id="@+id/button_sensor"
+        app:layout_widthPercent="25%"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button6"
+        app:layout_widthPercent="25%"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button1"
+        android:layout_toEndOf="@+id/button_sensor"
+        android:layout_toRightOf="@+id/button_sensor"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button7"
+        app:layout_widthPercent="25%"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button2"
+        android:layout_toEndOf="@+id/button6"
+        android:layout_toRightOf="@+id/button6"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button8"
+        app:layout_widthPercent="25%"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button3"
+        android:layout_toEndOf="@+id/button7"
+        android:layout_toRightOf="@+id/button7"
+        android:text="Button" />
+
+    <TextView
+        android:id="@+id/status_panel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="status" />
+
+    <TextView
+        android:id="@+id/debug_panel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/status_panel"
+        android:text="debug" />
+</android.support.percent.PercentRelativeLayout>
