--- a/app/src/main/res/menu/menu_ui.xml
+++ b/app/src/main/res/menu/menu_ui.xml
@@ -59,4 +59,8 @@
         android:id="@+id/spark_overlay"
         android:title="范围显示"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/dialog_test"
+        android:title="对话框显示"
+        app:showAsAction="never"/>
 </menu>
