--- a/app/src/main/res/layout/activity_net.xml
+++ b/app/src/main/res/layout/activity_net.xml
@@ -24,4 +24,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="send json" />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/scrollView0"
+        android:fillViewport="false">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:id="@+id/debugView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </ScrollView>
 </LinearLayout>
